Added Initial Health System

--- a/InfiniteMatrix.uproject
+++ b/InfiniteMatrix.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.17",
+	"EngineAssociation": "{0004152A-08DA-92B2-4A3B-188A09AF6C3A}",
 	"Category": "",
 	"Description": ""
 }
